--- a/src/styles/components/_note.scss
+++ b/src/styles/components/_note.scss
@@ -183,6 +183,16 @@
         &.active {
           background-color: $color-primary;
         }
+
+        &.with-color {
+          &.active {
+            background-color: rgba(255, 255, 255, 0.50) !important;
+          }
+
+          &:hover {
+            background-color: rgba(255, 255, 255, 0.50) !important;
+          }
+        }
       }
     }
   }
