--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -4,14 +4,16 @@
 .search {
   position: relative;
   height: max-content;
+  max-width: 530.17px;
+  width: 100%;
   display: none;
 
-  @include laptop {
+  @include tablet {
     display: flex;
   }
 
   .search-input {
-    width: 530.17px;
+    width: 100%;
     padding: .525rem .75rem;
     border-radius: $border-radius;
     box-shadow: 1px 1px 3px 0 rgba(0, 0, 0, 0.25);
